k8s/applications/public/coturn/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      namespace: coturn
      labels:
        app.kubernetes.io/name: coturn
        app: coturn
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65533
        fsGroup: 65533
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: coturn
          # Dockerfile: https://github.com/coturn/coturn/blob/master/docker/coturn/alpine/Dockerfile
          image: coturn/coturn:4.9.0-alpine3.23
          command:
            - turnserver
            - --config=/etc/coturn/turnserver.custom.conf
            - --proc-user=nobody
            - --proc-group=nogroup
            - --external-ip=$(detect-external-ip)
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              # cpu: 10m
              memory: 64Mi
            limits:
              # cpu: 100m
              memory: 64Mi
          ports:
            - {name: http, protocol: TCP, containerPort: 8080}
            - {name: stun-tcp, protocol: TCP, containerPort: 3478}
            - {name: stun-udp, protocol: UDP, containerPort: 3478}
            - {name: stuns-tcp, protocol: TCP, containerPort: 5349}
            - {name: stuns-udp, protocol: UDP, containerPort: 5349}
            - {name: p00, protocol: UDP, containerPort: 49160}
            - {name: p01, protocol: UDP, containerPort: 49161}
            - {name: p02, protocol: UDP, containerPort: 49162}
            - {name: p03, protocol: UDP, containerPort: 49163}
            - {name: p04, protocol: UDP, containerPort: 49164}
            - {name: p05, protocol: UDP, containerPort: 49165}
            - {name: p06, protocol: UDP, containerPort: 49166}
            - {name: p07, protocol: UDP, containerPort: 49167}
            - {name: p08, protocol: UDP, containerPort: 49168}
            - {name: p09, protocol: UDP, containerPort: 49169}
            - {name: p10, protocol: UDP, containerPort: 49170}
            - {name: p11, protocol: UDP, containerPort: 49171}
            - {name: p12, protocol: UDP, containerPort: 49172}
            - {name: p13, protocol: UDP, containerPort: 49173}
            - {name: p14, protocol: UDP, containerPort: 49174}
            - {name: p15, protocol: UDP, containerPort: 49175}
            - {name: p16, protocol: UDP, containerPort: 49176}
            - {name: p17, protocol: UDP, containerPort: 49177}
            - {name: p18, protocol: UDP, containerPort: 49178}
            - {name: p19, protocol: UDP, containerPort: 49179}
            - {name: p20, protocol: UDP, containerPort: 49180}
            - {name: p21, protocol: UDP, containerPort: 49181}
            - {name: p22, protocol: UDP, containerPort: 49182}
            - {name: p23, protocol: UDP, containerPort: 49183}
            - {name: p24, protocol: UDP, containerPort: 49184}
            - {name: p25, protocol: UDP, containerPort: 49185}
            - {name: p26, protocol: UDP, containerPort: 49186}
            - {name: p27, protocol: UDP, containerPort: 49187}
            - {name: p28, protocol: UDP, containerPort: 49188}
            - {name: p29, protocol: UDP, containerPort: 49189}
            - {name: p30, protocol: UDP, containerPort: 49191}
            - {name: p31, protocol: UDP, containerPort: 49192}
            - {name: p32, protocol: UDP, containerPort: 49193}
            - {name: p33, protocol: UDP, containerPort: 49194}
            - {name: p34, protocol: UDP, containerPort: 49195}
            - {name: p35, protocol: UDP, containerPort: 49196}
            - {name: p36, protocol: UDP, containerPort: 49197}
            - {name: p37, protocol: UDP, containerPort: 49198}
            - {name: p38, protocol: UDP, containerPort: 49199}
            - {name: p39, protocol: UDP, containerPort: 49200}
          volumeMounts:
            - {name: coturn-config-volume, mountPath: /etc/coturn/turnserver.custom.conf, subPath: turnserver.custom.conf, readOnly: true}
      volumes:
        - {name: coturn-config-volume, configMap: {name: coturn-config}}
