k8s/applications/public/coturn/Service.http.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webadmin
  namespace: coturn
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
